@@ -1,3 +1,10 @@
+2006-12-08  William Jon McCann  <mccann@jhu.edu>
+
+	* daemon/gdmconsolekit.c: (close_ck_session):
+	* daemon/slave.c: (session_child_run), (gdm_slave_session_start):
+	Don't set XDG_SESSION_COOKIE if we don't have a cookie.
+	Fixes #383866
+
 2006-12-08  Lukasz Zalewski  <lukas@dcs.qmul.ac.uk>
 
 	* gui/gdmsetup.c, gui/gdmsetup.glade: Additional fixes for bug/feature
